# Lunex

./: .gitignore  Cargo.toml  GENESIS_LIQUIDITY_GUIDE.md  LISTING_POLICY.md  README.md  REFACTORING_PLAN.md  WLUNES_REQUIREMENTS.md  package.json
artifacts/: factory_contract.contract  factory_contract.json  pair_contract.contract  pair_contract.json  router_contract.contract  router_contract.json  staking_contract.contract  staking_contract.json  trading_rewards_contract.contract  trading_rewards_contract.json  wnative_contract.contract  wnative_contract.json
config/: lunes-network.toml
deployment/: testnet.json.example
docs/: LUNEX_DEX_FEATURES.md  MEDIDAS_ANTI_FRAUDE_REWARDS.md  PROCESSO_LISTAGEM_HIBRIDO.md  RESUMO_COMPLETO_LUNEX_DEX.md  RESUMO_MEDIDAS_ANTIFRAUDE_STAKING.md  SISTEMA_GOVERNANCA_TAXAS.md  SISTEMA_HIBRIDO_LISTAGEM_COMPLETO.md  SISTEMA_PREMIACAO_STAKING.md
docs/guides/: QUICK_START_GUIDE.md  README_DEPLOY_LUNES.md  VERIFICATION_GUIDE.md
docs/reports/: AUDITORIA_GOVERNANCA_TAXAS.md  AUDITORIA_SEGURANCA_E_GAS_COMPLETA.md  PROGRESSO_FINAL_IMPLEMENTACAO.md  RELATORIO_FINAL_OTIMIZACAO_GAS_SEGURANCA.md  (+1 more)
examples/: admin-tokens.json  lunes-ecosystem-tokens.json  token-listing-config.json
scripts/: admin-list-token.ts  deploy-lunes.ts  list-token.ts  verify-deployment.ts
tests/: complete_staking_rewards_integration.rs  integration_e2e.rs  lunex_complete_integration_test.rs  openzeppelin_security_validation.rs  security_tests.rs  staking_integration_tests.rs  stress_tests.rs
uniswap-v2/contracts/router/: Cargo.toml  lib.rs
(+30 files in other folders)
