[package]
name = "router_contract"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
primitive-types = { version = "0.11.1", default-features = false, features = ["num-traits"] }
ink = { version = "5.1.1", default-features = false, features = ["scale-info"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# PSP22 v2.0 implementation (Cardinal-Cryptography)
psp22 = { version = "2.0", default-features = false, features = ["ink-as-dependency"] }

# Dependência temporariamente removida para permitir TDD isolado
# uniswap_v2 = { path = "../../logics", default-features = false }

[lib]
name = "router_contract"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "psp22/std",
    # "uniswap_v2/std"  # Removido temporariamente para TDD isolado
]
ink-as-dependency = []

